# helia

./: .gitignore  Cargo.toml  README.md  index.html
crates/core/: Cargo.toml
crates/core/src/: atlas.rs  camera.rs  entity.rs  game_object.rs  input.rs  lib.rs  mesh.rs  orbit_camera.rs  prefab.rs  scene.rs  shader.rs  texture.rs  time.rs  transform.rs  transform_hierarchy.rs
crates/helia_internal/: Cargo.toml
crates/helia_internal/src/: camera.rs  camera_controller.rs  entity.rs  input.rs  lib.rs  material.rs  orbit_camera.rs  scene.rs  shader.rs  texture.rs  time.rs  transform.rs
crates/helia_internal/src/shaders/: unlit_textured.wgsl
crates/primitives/: Cargo.toml
crates/primitives/src/: quad.rs
crates/ui/: Cargo.toml
crates/ui/src/: font.rs  lib.rs  slice_sprite.rs  text_mesh.rs
examples/: alpha.rs  cube.rs  gltf.rs  input.rs  prefabs.rs  sprite_animation.rs  ui.rs
examples/alpha/: Cargo.toml  index.html
examples/alpha/src/: game.rs  main.rs
examples/cube/: Cargo.toml  index.html
examples/cube/src/: game.rs  main.rs
examples/input/: Cargo.toml  index.html
examples/input/src/: game.rs
examples/instances/: Cargo.toml  index.html
examples/instances/src/: game.rs  lib.rs  main.rs
examples/prefabs/: Cargo.toml  index.html
examples/prefabs/src/: game.rs  lib.rs
examples/sprite_animation/: Cargo.toml  index.html
examples/sprite_animation/src/: aseprite.rs  game.rs  lib.rs  main.rs
helia_internal/: Cargo.toml
helia_internal/src/: camera.rs  camera_controller.rs  entity.rs  lib.rs  material.rs  mesh.rs  prefab.rs  scene.rs  shader.rs  texture.rs
helia_internal/src/shaders/: instanced.wgsl  sprite.wgsl  unlit_textured.wgsl
samples/tactics/: Cargo.toml
samples/tactics/src/: battle_stage.rs  battle_state.rs  character.rs  grid.rs  main.rs  player.rs  slice_sprite.rs  sprite.rs  text_mesh.rs  utils.rs
src/: camera.rs  camera_controller.rs  lib.rs  main.rs  material.rs  mesh.rs  shader.rs  shader.wgsl  texture.rs
templates/: index.html
