[package]
name = "helia"
version = "0.0.0"
edition = "2021"
description = "A Radiant Game Engine"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/delphic/helia"

[workspace]
members = [ "crates/*", "examples/*", "samples/*" ]

[dependencies]
core = { path = "crates/core" }
ui = { path = "crates/ui" }
primitives = { path = "crates/primitives" }

[dev-dependencies]
pollster = "0.3"
glam = "0.23"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gltf = { version = "1.1", features = [ "extras", "names" ] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
