[package]
name = "core"
version = "0.0.0"
edition = "2021"
description = "Helia core"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]
# rlib for desktop env, cdylib for wasm

[dependencies]
winit = "0.29"
env_logger = "0.11"
log = "0.4"
wgpu = "0.20"
bytemuck = { version = "1.12", features = [ "derive" ] }
anyhow = "1.0"
glam = "0.29"
cfg-if = "1"
instant = { version = "0.1", features = ["wasm-bindgen"] }
slotmap = "1.0.6" # if / when we need serialization features = [ "serde" ]

[dependencies.image]
version = "0.25"
default-features = false
features = ["png"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
console_log = "1.0.0"
wgpu = { version = "0.20", features = ["webgl"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Window",
    "Element",
] }