[package]
name = "ui"
version = "0.0.0"
edition = "2021"
description = "Helia UI"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
glam = "0.29"
log = "0.4"
core = { path = "../core" }
primitives = { path = "../primitives" }
