[package]
name = "helia-sprite-animation-example"
version = "0.0.1"
edition = "2021"
description = "Binary and WASM exportable helia sprite animation example"

[dependencies]
helia = { path = "../../" }
pollster = "0.3"
glam = "0.23"
winit = "0.28"
wgpu = "0.15"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"