[package]
name = "helia-tactics"
version = "0.0.1"
edition = "2021"
description = "A sample tactics battle system"

[dependencies]
helia = { path = "../../" }
pollster = "0.3"
glam = "0.27"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"